# IRIS

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
coach_teensy_interface/: .gitignore  CHANGELOG.md  LICENSE  load-teensy.sh  readme.md
coach_teensy_interface/kicad/: .gitignore  classchip-cache.lib  classchip-eagle-import.lib  classchip.kicad_pcb  classchip.pro  classchip.sch  fp-info-cache  fp-lib-table  sym-lib-table
coach_teensy_interface/kicad/classchip.pretty/: 1X03.kicad_mod  1X04.kicad_mod  1X16.kicad_mod  3,17_1,3.kicad_mod  C025-024X044.kicad_mod  C0805.kicad_mod  C1206.kicad_mod  LED_1206.kicad_mod  MY_TEENSY.kicad_mod  R0402.kicad_mod  R0805.kicad_mod  S84.kicad_mod  SOP16.kicad_mod  SOP65P780X200-28N.kicad_mod  SOT23-8.kicad_mod  SOT23-DBV.kicad_mod  SOT96-1_NXP.kicad_mod  TSSOP20.kicad_mod  TSSOP_16.kicad_mod  neuron.kicad_mod
coach_teensy_interface/src/: CMakeLists.txt  usb_packets.h
coach_teensy_interface/src/config/: version.h.in
coach_teensy_interface/src/pc/: CMakeLists.txt  HowTo-Release.md  coach.h  pybind_enums.awk
coach_teensy_interface/src/pc/pypi/: CMakeLists.txt  Dockerfile  setup.py.in
coach_teensy_interface/src/pc/pypi/util/: build-wheels.sh  repair-wheels.sh
coach_teensy_interface/src/pc/pyplane/: CMakeLists.txt  plane.cpp  plane.h  planeimpl.cpp  planeimpl.h  pyplane.cpp  teensy_serial.cpp  teensy_serial.h
coach_teensy_interface/src/teensy/: CMakeLists.txt  aer.cpp  aer.h  chips.cpp  chips.h  main.cpp
documentation/: ALIVE Testing Interface  README.md  getting_started.md  installation.md
imgui_frontend/: .gitignore  CMakeLists.txt  Makefile  clean_build_run.sh  imgui.ini  ll.csv
imgui_frontend/backends/: imgui_impl_glfw.h  imgui_impl_opengl3.h
imgui_frontend/data/: ALIVE_InputsA.csv  ALIVE_InputsD.csv  ALIVE_OutputsA.csv  ALIVE_OutputsD.csv  BiasValues_BIASGEN.csv  BiasValues_DAC.csv  BiasValues_SPI.csv  outputC2F_02_08_15_16.csv  outputC2F_02_08_15_19.csv  outputC2F_02_08_15_25.csv  outputC2F_02_08_15_47.csv  outputC2F_02_08_15_48.csv  outputC2F_02_08_16_02.csv  outputC2F_03_08_11_30.csv  outputC2F_03_08_13_01.csv  outputEncoder_02_08_15_11.csv  outputEncoder_02_08_15_19.csv  outputEncoder_02_08_15_25.csv  outputEncoder_02_08_15_47.csv  outputEncoder_02_08_15_48.csv  outputEncoder_02_08_16_02.csv  outputEncoder_03_08_11_30.csv  outputEncoder_03_08_13_01.csv
imgui_frontend/data/BIASGEN_biases/: biasValues_BIASGEN.csv  buffer_0.csv  testing.csv
imgui_frontend/data/DAC_biases/: 1.csv  NAME_dac.csv  biasValues_DAC copy.csv  test.csv  testing.csv
imgui_frontend/data/IIValues/: ALIVE_II.csv  ALIVE_III.csv  SL_0411_dn_evol.csv  SL_0411_dn_narrow_SL.csv  SL_0411_up_evol.csv  SL_0711_NN.csv  SL_0711_NN_ampa-.csv  SL_0711_NN_up_dn_w.csv  test.csv
imgui_frontend/data/customBiasValues/BIASGEN/: CC_LB_0411.csv
imgui_frontend/data/defaultBiasValues/: .gitignore  AHPC_DAC_POR.csv  ALIVE_BIASGEN_POR.csv  ALIVE_DAC_POR.csv  BIOAMP_BIASGEN_POR.csv  SPAIC_BIASGEN_POR.csv  SPAIC_DAC_POR.csv
imgui_frontend/data/recordings/: SPAIC_outputEncoder_CH2_200hz_3mVpp_por.csv  SPAIC_outputEncoder_POR_CH1.csv  SPAIC_outputEncoder_POR_noinput_noise.csv
imgui_frontend/imgui/imgui_backend/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
imgui_frontend/include/: constants.h  dataFunctions.h  guiFunctions.h  serial.h  serialFunctions.h
imgui_frontend/src/: #dataFunctions.cpp#  #guiFunctions.cpp#  dataFunctions.cpp  guiFunctions.cpp  main.cpp  serial.cpp  serialFunctions.cpp
imgui_frontend/src/src/: Makefile  bias_control.cpp  bias_control.h  bias_tools.cpp  biasgen_por.csv  biasgen_por.numbers  imgui.ini  imgui_log.txt  main  main.cpp  teensy.cpp  teensy.h
teensy_backend/: .gitignore  CMakeLists.txt  platformio.ini
teensy_backend/include/: AER_in.h  aer.h  biasGen.h  configSPI.h  constants.h  constants_ahpc.h  constants_alive.h  constants_bioamp.h  constants_global.h  constants_spaic.h  constants_texel.h  dac.h  datatypes.h  spiConfig.h  teensyIn.h  teensyOut.h  texel.h
teensy_backend/src/: AER_in.cpp  aer.cpp  aer.h  aer_in.cpp  aer_in.h  aer_out.cpp  aer_out.h  biasGen.cpp  configSPI.cpp  dac.cpp  dac.h  datatypes.cpp  datatypes.h  main.cpp  main1.cpp  ncs_teensy.h  packets.cpp  spiConfig.cpp  teensy.cpp  teensyIn.cpp  teensyOut.cpp  teensy_interface.cpp  teensy_interface.h  texel.cpp
testing_stuff/src/: main.cpp
udev_rules/: 49-teensy.rules
